@@ -1,3 +1,13 @@
+2006-12-14
+	* corrected typing error in column name
+	* corrected bug - tuple extensions were not stored into database
+	* corrected XMLRPC - after changes in xmlrpc module CDATA sections didn't
+	work as before and had to be thrown out
+
+2006-12-13
+	* database column names are stored in variables and configurable via
+	module parameters
+
 2006-12-07
 	* updated doc to be compilable standalone
 
